# sbirtools

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: DESIGN.md  IMPLEMENTATION_PLAN.md  sample-sbir-awards.csv
sbirtools/: __init__.py  _cli.py  _data.py  _result.py  _sandbox.py  _worker.py
tests/: conftest.py  test_data.py  test_result.py  test_run.py  test_security.py  test_session.py
