[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sbirtools"
version = "0.1.0"
description = "Hardened Python sandbox with SBIR awards data for AI agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
]

[project.scripts]
sbirtools-download-data = "sbirtools._cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sbirtools*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
