[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sbirtools"
version = "0.1.0"
description = "Hardened Python sandbox with SBIR awards data for AI agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
]
keywords = ["sbir", "sandbox", "agents", "pandas", "data"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/gerwaric/sbirtools"
Repository = "https://github.com/gerwaric/sbirtools"

[project.optional-dependencies]
dev = [
    "pytest>=7",
]

[project.scripts]
sbirtools-download-data = "sbirtools._cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sbirtools*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
